--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     <!-- syntax highlighting CSS -->
     <link rel="stylesheet" href="/assets/css/syntax.css">
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap-responsive.min.css">
     <link rel="stylesheet" href="/assets/css/custom.css">
     <!-- HTML5 Shim ??? -->
   </head>
