--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,11 @@
 ---
 layout: default
 ---
+<div class="offset2 span8">
 <h2>{{ page.title }}</h2>
 <p class="meta">{{ page.date | date_to_string }}</p>
 
 <div id="post">
 {{ content }}
+</div>
 </div>
