--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,15 @@
 body {
 	padding-top: 70px;
 }
+
+#home h2 {
+	margin: 30px auto;
+	text-align: center;
+}
+
+.post .title {
+	display: block;
+	margin: 50px auto 10px;
+	text-align: center;
+	font-size: 1.3em;
+}
