--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="/assets/css/bootstrap-responsive.min.css">
     <link rel="stylesheet" href="/assets/css/custom.css">
     <!-- HTML5 Shim ??? -->
+
+    <link rel="alternate" type="application/rss+xml" title="Objectzilla" href="http://www.objectzilla.com.br/feed/" />
   </head>
 
   <body>
