Adicionando textura ao fundo

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,5 +1,23 @@
 body {
 	padding-top: 70px;
+}	
+
+body, .navbar-inner {
+	background-image: url("../img/lightpaperfibers.png");
+}
+
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (   min--moz-device-pixel-ratio: 2),
+only screen and (     -o-min-device-pixel-ratio: 2/1),
+only screen and (        min-device-pixel-ratio: 2),
+only screen and (                min-resolution: 192dpi),
+only screen and (                min-resolution: 2dppx) { 
+  
+	/* Retina-specific stuff here */
+	body, .navbar-inner {
+		background-image: url("../img/lightpaperfibers_@2X.png");
+	}
 }
 
 #home h2 {
