--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
             {{ site.name }}, <span class="minor">por Leonardo Ver&iacute;ssimo da Silva</span>
           </a>
           <span class="pull-right hidden-phone">
-            <a class="brand" href="#">Sobre</a>
+            <a class="brand" href="/about.html">Sobre</a>
           </span>
         </div>
       </div>
