--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
           <div class="span6">
             <p>
               <strong>Leonardo Veríssimo da Silva</strong><br />
-              &eacute; desenvolvedor s&ecirc;nior<br />
+              &eacute; programador Java h&aacute; bastante tempo com boa experi&ecirc;ncia em desenvolver software.<br />
             </p>
           </div>
           <div class="span6">
